--- a/index.html
+++ b/index.html
@@ -20,25 +20,27 @@
   
   <div class="header-wrap">
     <div class="container">
-      <div class="header">
+      <div class="header cf">
         <div class="logo">
           <a href="/">
-            <img src="" alt="">
+            <img src="images/header-logo.png" alt="">
           </a>
         </div>
         <div class="header-info">
           <div class="header-info-item">
             <p>Работаем <b>09:00 - 20:00</b></p>
-            <p></p>
+            <p>Ежедневно, без выходных</p>
           </div>
           <div class="header-info-item">
-            <p></p>
-            <p></p>
+            <p>Казань, <b>пр. Ленина, 21</b></p>
+            <p>Москва, <b>ул. Владимирского, 44</b></p>
           </div>
         </div>
         <div class="header-callback">
-          <a href="tel:"></a>
-          <a href="tel:"></a>
+          <div class="header-callback-in">
+            <a href="tel:79172571901">+7-917-257-19-01</a>
+            <a href="tel:79178908099">+7-917-890-80-99</a>
+          </div>
         </div>
       </div>
     </div>
@@ -51,10 +53,59 @@
       <div class="showcase">
         <div class="showcase-item">
           <div class="showcase-item__img">
-            <img src="" alt="">
+            <img src="images/showcase-img1.png" alt="">
           </div>
-          <h3 class="showcase-item__head"></h3>
-          <p class="showcase-item__text"></p>
+          <h3 class="showcase-item__head">Пиломатериалы</h3>
+          <p class="showcase-item__text">Продажа погонажа, зарезка чаш по проекту, готовые</p>
+        </div>
+        <div class="showcase-item">
+          <div class="showcase-item__img">
+            <img src="images/showcase-img2.png" alt="">
+          </div>
+          <h3 class="showcase-item__head">Опалубка</h3>
+          <p class="showcase-item__text">Продажа погонажа, зарезка чаш по проекту, готовые</p>
+        </div>
+        <div class="showcase-item">
+          <div class="showcase-item__img">
+            <img src="images/showcase-img3.png" alt="">
+          </div>
+          <h3 class="showcase-item__head">Фанера</h3>
+          <p class="showcase-item__text">Продажа погонажа, зарезка чаш по проекту, готовые</p>
+        </div>
+        <div class="showcase-item">
+          <div class="showcase-item__img">
+            <img src="images/showcase-img4.png" alt="">
+          </div>
+          <h3 class="showcase-item__head">блоки укрытие для бетона</h3>
+          <p class="showcase-item__text">Продажа погонажа, зарезка чаш по проекту, готовые</p>
+        </div>
+        <div class="showcase-item">
+          <div class="showcase-item__img">
+            <img src="images/showcase-img1.png" alt="">
+          </div>
+          <h3 class="showcase-item__head">Пластиковые закладные в бетон</h3>
+          <p class="showcase-item__text">Продажа погонажа, зарезка чаш по проекту, готовые</p>
+        </div>
+        <div class="showcase-item">
+          <div class="showcase-item__img">
+            <img src="images/showcase-img2.png" alt="">
+          </div>
+          <h3 class="showcase-item__head">Комплектующие для опалубки</h3>
+          <p class="showcase-item__text">Продажа погонажа, зарезка чаш по проекту, готовые</p>
+        </div>
+        <div class="showcase-item">
+          <div class="showcase-item__img">
+            <img src="images/showcase-img3.png" alt="">
+          </div>
+          <h3 class="showcase-item__head">приточные клапаны "Домвент"</h3>
+          <p class="showcase-item__text">Продажа погонажа, зарезка чаш по проекту, готовые</p>
+        </div>
+        <div class="showcase-item">
+          <div class="showcase-item__img">
+            <img src="images/showcase-img4.png" alt="">
+          </div>
+          <h3 class="showcase-item__head">Другие материалы</h3>
+          <p class="showcase-item__text">Продажа погонажа, зарезка чаш по проекту, готовые</p>
         </div>
       </div>
     </div>
@@ -67,44 +118,353 @@
       <div class="nav">
         <ul class="nav-main">
           <li class="nav__list">
-            <a href="#" class="nav__link"></a>
+            <a href="#" class="nav__link">продукция</a>
             <ul class="nav-sub">
               <li class="nav-sub__list">
-                <a href="#" class="nav-sub__link"></a>
+                <a href="#" class="nav-sub__link">Фанера</a>
               </li>
               <li class="nav-sub__list">
-                <a href="#" class="nav-sub__link"></a>
+                <a href="#" class="nav-sub__link">Опалубка</a>
               </li>
               <li class="nav-sub__list">
-                <a href="#" class="nav-sub__link"></a>
+                <a href="#" class="nav-sub__link">Комплектующие для опалубки</a>
               </li>
               <li class="nav-sub__list">
-                <a href="#" class="nav-sub__link"></a>
+                <a href="#" class="nav-sub__link">Пластиковые закладные в бетон</a>
               </li>
               <li class="nav-sub__list">
-                <a href="#" class="nav-sub__link"></a>
+                <a href="#" class="nav-sub__link">Оборудование для монолитных работ</a>
               </li>
               <li class="nav-sub__list">
-                <a href="#" class="nav-sub__link"></a>
+                <a href="#" class="nav-sub__link">Ветро-парозащитные пленки и геотекстиль</a>
               </li>
               <li class="nav-sub__list">
-                <a href="#" class="nav-sub__link"></a>
+                <a href="#" class="nav-sub__link">Другие товары</a>
               </li>
             </ul>
           </li>
           <li class="nav__list">
-            <a href="#" class="nav__link"></a>
+            <a href="#" class="nav__link">цены</a>
           </li>
           <li class="nav__list">
-            <a href="#" class="nav__link"></a>
+            <a href="#" class="nav__link">доставка</a>
           </li>
           <li class="nav__list">
-            <a href="#" class="nav__link"></a>
+            <a href="#" class="nav__link">информация</a>
           </li>
           <li class="nav__list">
-            <a href="#" class="nav__link"></a>
+            <a href="#" class="nav__link">контакты</a>
           </li>
         </ul>
+      </div>
+    </div>
+  </div>
+  
+  <!-- Products -->
+  
+  <div class="products-wrap">
+    <div class="container">
+      <div class="products">
+        <h2 class="products__head">
+          <span>Пиломатериалы: профилированный брус, </span>
+          <span>оцилиндрованное бревно по ценам от производителя</span>
+        </h2>
+        <div class="products__caption">Компания «Строительная Академия» осуществляет производство и продажу обрезного пиломатериала.</div>
+        <div class="products__descr">Доставка осуществляется автотранспортом до потребителей в Московской, Тверской и других областей. Мы предлагаем обрезной пиломатериал хвойных пород. Основными видами нашей продукции являются: доска обрезная, брус, профилированный брус, оцилиндрованное бревно. Производство пиломатериала расположено в Казани.</div>
+        <div class="products-items">
+          <div class="products-item">
+            <a href="#" class="products-item__img">
+              <img src="images/products-img1.jpg" alt="">
+            </a>
+            <div class="products-item-content">
+              <a href="#" class="products-item__head">Профилированный брус</a>
+              <p>от 7 300 р/м3</p>
+            </div>
+          </div>
+          <div class="products-item">
+            <a href="#" class="products-item__img">
+              <img src="images/products-img2.jpg" alt="">
+            </a>
+            <div class="products-item-content">
+              <a href="#" class="products-item__head">Профилированный брус</a>
+              <p>от 7 300 р/м3</p>
+            </div>
+          </div>
+          <div class="products-item">
+            <a href="#" class="products-item__img">
+              <img src="images/products-img3.jpg" alt="">
+            </a>
+            <div class="products-item-content">
+              <a href="#" class="products-item__head">Профилированный брус</a>
+              <p>от 7 300 р/м3</p>
+            </div>
+          </div>
+          <div class="products-item">
+            <a href="#" class="products-item__img">
+              <img src="images/products-img4.jpg" alt="">
+            </a>
+            <div class="products-item-content">
+              <a href="#" class="products-item__head">Профилированный брус</a>
+              <p>от 7 300 р/м3</p>
+            </div>
+          </div>
+          <div class="products-item">
+            <a href="#" class="products-item__img">
+              <img src="images/products-img1.jpg" alt="">
+            </a>
+            <div class="products-item-content">
+              <a href="#" class="products-item__head">Профилированный брус</a>
+              <p>от 7 300 р/м3</p>
+            </div>
+          </div>
+          <div class="products-item">
+            <a href="#" class="products-item__img">
+              <img src="images/products-img2.jpg" alt="">
+            </a>
+            <div class="products-item-content">
+              <a href="#" class="products-item__head">Профилированный брус</a>
+              <p>от 7 300 р/м3</p>
+            </div>
+          </div>
+          <div class="products-item">
+            <a href="#" class="products-item__img">
+              <img src="images/products-img3.jpg" alt="">
+            </a>
+            <div class="products-item-content">
+              <a href="#" class="products-item__head">Профилированный брус</a>
+              <p>от 7 300 р/м3</p>
+            </div>
+          </div>
+          <div class="products-item">
+            <a href="#" class="products-item__img">
+              <img src="images/products-img4.jpg" alt="">
+            </a>
+            <div class="products-item-content">
+              <a href="#" class="products-item__head">Профилированный брус</a>
+              <p>от 7 300 р/м3</p>
+            </div>
+          </div>
+        </div>
+        <a href="#" class="products__link">Смотреть весь каталог</a>
+      </div>
+    </div>
+  </div>
+  
+  <!-- Info -->
+  
+  <div class="info-wrap">
+    <div class="container">
+      <div class="info cf">
+        <div class="info-price">
+         <h3 class="info-price__head">Цены на строительные материалы</h3>
+         <p class="info-price__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus sapien nunc eget.</p>
+         <div class="info-price-content">
+           <a href="tel:88005553535" class="info-price__tel">8 800 555 35 35</a>
+           <p><b>ЗВОНИТЕ!</b> Готовы обсудить все вопросы.</p>
+         </div>
+        </div>
+        <div class="info-deliver">
+          <h3 class="info-deliver__head">Осуществляем доставку своим транспортом!</h3>
+          <div class="info-deliver__caption">Оказываем услуги по разгрузке материалов на месте</div>
+          <img src="images/info-deliver-img.jpg" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+  
+<!-- Partners -->
+  
+  <div class="partners-wrap">
+    <div class="container">
+      <div class="partners cf">
+        <div class="partners-cause">
+          <h3 class="partners-cause__head">
+            <span>5 Причин,</span>
+            <span>что вы нашли надежного партнера</span>
+          </h3>
+          <ul>
+            <li>Опыт более 10 лет, тысячи благодарных клиентов</li>
+            <li>Широкий ассортимент продукции и предлагаемых услуг</li>
+            <li>Оптимальное соотношение цены и качества</li>
+            <li>Математически верные расчеты кубатуры</li>
+            <li>Доставка материалов на объект с оплатой по факту</li>
+          </ul>
+        </div>
+        <div class="partners-connect">
+          <h3 class="partners-connect__head">
+            <span>Присоединяйтесь </span>
+            <span>к нашим партнерам</span>
+          </h3>
+          <div class="partners-logos">
+            <div class="partners-logos-item">
+              <img src="images/partners-img1.png" alt="">
+            </div>
+            <div class="partners-logos-item">
+              <img src="images/partners-img2.png" alt="">
+            </div>
+            <div class="partners-logos-item">
+              <img src="images/partners-img3.png" alt="">
+            </div>
+            <div class="partners-logos-item">
+              <img src="images/partners-img1.png" alt="">
+            </div>
+            <div class="partners-logos-item">
+              <img src="images/partners-img2.png" alt="">
+            </div>
+            <div class="partners-logos-item">
+              <img src="images/partners-img1.png" alt="">
+            </div>
+            <div class="partners-logos-item">
+              <img src="images/partners-img2.png" alt="">
+            </div>
+            <div class="partners-logos-item">
+              <img src="images/partners-img3.png" alt="">
+            </div>
+            <div class="partners-logos-item">
+              <img src="images/partners-img1.png" alt="">
+            </div>
+            <div class="partners-logos-item">
+              <img src="images/partners-img2.png" alt="">
+            </div>
+            <div class="partners-logos-item">
+              <img src="images/partners-img1.png" alt="">
+            </div>
+            <div class="partners-logos-item">
+              <img src="images/partners-img2.png" alt="">
+            </div>
+            <div class="partners-logos-item">
+              <img src="images/partners-img3.png" alt="">
+            </div>
+            <div class="partners-logos-item">
+              <img src="images/partners-img1.png" alt="">
+            </div>
+            <div class="partners-logos-item">
+              <img src="images/partners-img2.png" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <!-- Main news -->
+  
+  <div class="main-news-wrap">
+    <div class="container">
+      <div class="main-new">
+        <h2 class="main-news__head">Новости <span>/</span> <a href="#"> Все новости</a></h2>
+        <div class="main-news-items">
+          <div class="main-news_item">
+            <a href="#" class="main-news-item__img">
+              <img src="images/main-news-img.jpg" alt="">
+            </a>
+            <div class="main-news-content">
+              <div class="main-news-content__time">31.02.2017</div>
+              <h3 class="main-news-content__head">Заголовок первой новости</h3>
+              <a href="#" class="main-news-content__link">Подробнее</a>
+            </div>
+          </div>
+          <div class="main-news_item">
+            <a href="#" class="main-news-item__img">
+              <img src="images/main-news-img.jpg" alt="">
+            </a>
+            <div class="main-news-content">
+              <div class="main-news-content__time">31.02.2017</div>
+              <h3 class="main-news-content__head">Заголовок первой новости</h3>
+              <a href="#" class="main-news-content__link">Подробнее</a>
+            </div>
+          </div>
+          <div class="main-news_item">
+            <a href="#" class="main-news-item__img">
+              <img src="images/main-news-img.jpg" alt="">
+            </a>
+            <div class="main-news-content">
+              <div class="main-news-content__time">31.02.2017</div>
+              <h3 class="main-news-content__head">Заголовок первой новости</h3>
+              <a href="#" class="main-news-content__link">Подробнее</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <!-- Contacts -->
+  
+  <div class="contacts-wrap">
+    <div class="container">
+      <div class="contacts cf">
+        <div class="contacts-in">
+          <h2 class="contacts__head">Наши контакты</h2>
+          <div class="contacts-items">
+            <div class="contacts-item">
+              <span>Отдел продаж</span>
+              <a href="tel:88005553535" class="contacts-item__tel">8 800 555 35 35</a>
+            </div>
+            <div class="contacts-item">
+              <span>Адрес склада:  в Казани  / <a href="#">в Москве</a></span>
+              <div class="contacts-item__address">Казань, пр. Ленина 21</div>
+            </div>
+          </div>
+          <div class="contacts-item-map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d9290635.710903395!2d40.297852!3d55.35413500000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sru!4v1492613040604" allowfullscreen></iframe>
+          </div>
+        </div>
+        <div class="form">
+          <h2 class="form__head">Пишите нам</h2>
+          <p class="form__caption">для получения консультации или заказа продукции</p>
+          <form action="post">
+            <div class="form__input form__input_min">
+              <input type="text" placeholder="Ваше имя" onfocus="placeholder='';" onblur="placeholder='Ваше имя';" />
+              <input type="text" placeholder="Номер телефона" onfocus="placeholder='';" onblur="placeholder='Номер телефона';" />
+            </div>
+            <div class="form__input">
+              <input type="text" placeholder="Тема сообщения" onfocus="placeholder='';" onblur="placeholder='Тема сообщения';" />
+            </div>
+            <div class="form__input">
+              <textarea placeholder="Текст сообщения" onfocus="placeholder='';" onblur="placeholder='Текст сообщения';"></textarea>
+            </div>
+            <button type="submit">отправить</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <!-- Footer -->
+  
+  <div class="footer-wrap">
+    <div class="container">
+      <div class="footer cf">
+        <div class="footer-logo">
+          <a href="/">
+            <img src="images/footer-logo.png" alt="">
+          </a>
+          <p class="footer-copy">©  Строительная Академия, 2017</p>
+          <p class="footer-copy">Компания «Веста Парк» - комплексное снабжение строительных объектов</p>
+        </div>
+        <div class="footer-info">
+          <div class="footer-nav">
+            <ul>
+              <li><a href="#">Продукция</a></li>
+              <li><a href="#">Цены</a></li>
+              <li><a href="#">Доставка</a></li>
+              <li><a href="#">Информация</a></li>
+              <li><a href="#">Контакты</a></li>
+            </ul>
+          </div>
+          <div class="footer-contacts">
+            <div class="footer-contacts-item">
+              <p>Казань, <b>пр. Ленина, 21</b></p>
+              <p>Москва, <b>ул. Владимирского, 44</b></p>
+            </div>
+            <div class="footer-contacts-item">
+              <p>Телефон</p>
+              <a href="tel:88005553535">8 800 555 35 35</a>
+            </div>
+            <div class="omg">©  Разработка сайта <a href="#">OMG.im</a></div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
