--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@
   <div class="nav-wrap">
     <div class="container">
       <div class="nav">
+       <div class="burger-wrap">
+          <a href="#"><span></span></a>
+       </div>
         <ul class="nav-main">
           <li class="nav__list">
             <a href="#" class="nav__link">продукция</a>
