--- a/catalog.html
+++ b/catalog.html
@@ -105,8 +105,7 @@
       <div class="bread">
         <ul>
           <li><a href="#">Главная</a></li>
-          <li><a href="#">Продукция</a></li>
-          <li>Страница товара</li>
+          <li>Продукция</li>
         </ul>
       </div>
     </div>
@@ -174,22 +173,22 @@
         </div>
         <div class="content">
           <div class="catalog">
-            <h2 class="catalog__head"></h2>
-            <p class="catalog__caption"></p>
+            <h2 class="catalog__head">Фанера в Казани</h2>
+            <p class="catalog__caption">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus sapien nunc eget.</p>
             <div class="catalog-items">
               <table class="catalog-item">
                 <tr>
                   <td>
-                    <img class="catalog-item__img" src="" alt="">
+                    <img class="catalog-item__img" src="images/catalog-item__img1.jpg" alt="">
                   </td>
                   <td>
-                    <h3 class="catalog-item__head">2</h3>
-                    <p>22</p>
+                    <h3 class="catalog-item__head">Ламинированная фанера ФОФ 1220х2440х18</h3>
+                    <p>Мы гарантируем качество нашей продукции. "Строительная Академия" позволяет сэкономить на покупке. Специалисты компании "Строительная Академия" готовы проконсультировать по предлагаемому ассортименту.</p>
                   </td>
                   <td>
                     <div class="catalog-item-price">
-                      <p></p>
-                      <span>3</span>
+                      <p>Цена:</p>
+                      <span>от 1 795 руб./шт.</span>
                     </div>
                   </td>
                 </tr>
