--- a/catalog.html
+++ b/catalog.html
@@ -182,8 +182,10 @@
                     <img class="catalog-item__img" src="images/catalog-item__img1.jpg" alt="">
                   </td>
                   <td>
-                    <h3 class="catalog-item__head">Ламинированная фанера ФОФ 1220х2440х18</h3>
-                    <p>Мы гарантируем качество нашей продукции. "Строительная Академия" позволяет сэкономить на покупке. Специалисты компании "Строительная Академия" готовы проконсультировать по предлагаемому ассортименту.</p>
+                   <div class="catalog-item__content">
+                     <h3 class="catalog-item__head">Ламинированная фанера ФОФ 1220х2440х18</h3>
+                    <p class="catalog-item__text">Мы гарантируем качество нашей продукции. "Строительная Академия" позволяет сэкономить на покупке. Специалисты компании "Строительная Академия" готовы проконсультировать по предлагаемому ассортименту.</p>
+                   </div>
                   </td>
                   <td>
                     <div class="catalog-item-price">
