--- a/catalog.html
+++ b/catalog.html
@@ -179,11 +179,11 @@
               <table class="catalog-item">
                 <tr>
                   <td>
-                    <img class="catalog-item__img" src="images/catalog-item__img1.jpg" alt="">
+                    <a href="#"><img class="catalog-item__img" src="images/catalog-item__img1.jpg" alt=""></a>
                   </td>
                   <td>
                    <div class="catalog-item__content">
-                     <h3 class="catalog-item__head">Ламинированная фанера ФОФ 1220х2440х18</h3>
+                    <a href="#" class="catalog-item__head"><h3>Ламинированная фанера ФОФ 1220х2440х18</h3></a>
                     <p class="catalog-item__text">Мы гарантируем качество нашей продукции. "Строительная Академия" позволяет сэкономить на покупке. Специалисты компании "Строительная Академия" готовы проконсультировать по предлагаемому ассортименту.</p>
                    </div>
                   </td>
@@ -199,11 +199,11 @@
               <table class="catalog-item">
                 <tr>
                   <td>
-                    <img class="catalog-item__img" src="images/catalog-item__img2.jpg" alt="">
+                    <a href="#"><img class="catalog-item__img" src="images/catalog-item__img2.jpg" alt=""></a>
                   </td>
                   <td>
                    <div class="catalog-item__content">
-                     <h3 class="catalog-item__head">Ламинированная фанера ФОФ 1220х2440х18</h3>
+                    <a href="#" class="catalog-item__head"><h3>Ламинированная фанера ФОФ 1220х2440х18</h3></a>
                     <p class="catalog-item__text">Мы гарантируем качество нашей продукции. "Строительная Академия" позволяет сэкономить на покупке. Специалисты компании "Строительная Академия" готовы проконсультировать по предлагаемому ассортименту.</p>
                    </div>
                   </td>
@@ -219,11 +219,11 @@
               <table class="catalog-item">
                 <tr>
                   <td>
-                    <img class="catalog-item__img" src="images/catalog-item__img1.jpg" alt="">
+                    <a href="#"><img class="catalog-item__img" src="images/catalog-item__img1.jpg" alt=""></a>
                   </td>
                   <td>
                    <div class="catalog-item__content">
-                     <h3 class="catalog-item__head">Ламинированная фанера ФОФ 1220х2440х18</h3>
+                    <a href="#" class="catalog-item__head"><h3>Ламинированная фанера ФОФ 1220х2440х18</h3></a>
                     <p class="catalog-item__text">Мы гарантируем качество нашей продукции. "Строительная Академия" позволяет сэкономить на покупке. Специалисты компании "Строительная Академия" готовы проконсультировать по предлагаемому ассортименту.</p>
                    </div>
                   </td>
@@ -239,11 +239,11 @@
               <table class="catalog-item">
                 <tr>
                   <td>
-                    <img class="catalog-item__img" src="images/catalog-item__img2.jpg" alt="">
+                    <a href="#"><img class="catalog-item__img" src="images/catalog-item__img2.jpg" alt=""></a>
                   </td>
                   <td>
                    <div class="catalog-item__content">
-                     <h3 class="catalog-item__head">Ламинированная фанера ФОФ 1220х2440х18</h3>
+                    <a href="#" class="catalog-item__head"><h3>Ламинированная фанера ФОФ 1220х2440х18</h3></a>
                     <p class="catalog-item__text">Мы гарантируем качество нашей продукции. "Строительная Академия" позволяет сэкономить на покупке. Специалисты компании "Строительная Академия" готовы проконсультировать по предлагаемому ассортименту.</p>
                    </div>
                   </td>
@@ -259,11 +259,11 @@
               <table class="catalog-item">
                 <tr>
                   <td>
-                    <img class="catalog-item__img" src="images/catalog-item__img1.jpg" alt="">
+                    <a href="#"><img class="catalog-item__img" src="images/catalog-item__img1.jpg" alt=""></a>
                   </td>
                   <td>
                    <div class="catalog-item__content">
-                     <h3 class="catalog-item__head">Ламинированная фанера ФОФ 1220х2440х18</h3>
+                    <a href="#" class="catalog-item__head"><h3>Ламинированная фанера ФОФ 1220х2440х18</h3></a>
                     <p class="catalog-item__text">Мы гарантируем качество нашей продукции. "Строительная Академия" позволяет сэкономить на покупке. Специалисты компании "Строительная Академия" готовы проконсультировать по предлагаемому ассортименту.</p>
                    </div>
                   </td>
